<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- The groupId must be the same for everybody -->
  <groupId>it.polimi.ingsw</groupId>
  <!-- Change the artifactId depending on your group number
       (example: group 99 will have artifactId PSP99 -->
  <artifactId>PSP10</artifactId>

  <version>1.0-SNAPSHOT</version>
  <name>MastersOfRenaissance</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>

    <!-- JUnit provides unit testing for Java applications -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations</artifactId>
          <version>RELEASE</version>
          <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>13</version>
      </dependency>

      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.8.6</version>
      </dependency>



  </dependencies>

  <build>
    <plugins>

      <!-- Java version -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <!-- Version of the Java language to use -->
          <source>11</source>
          <!-- Minimum JRE version the JAR will be compatible with -->
          <target>11</target>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>